# RepTrace

./: .gitignore  .jscpd.json  CITATION.cff  README.md  environment.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/scripts/: install-rclone.ps1  install-rclone.sh
.github/workflows/: mega-linter.yml  nod-decoder-all.yml  nod-paper2-temporal.yml  onset-sensitivity-smoke.yml  onset-smoke.yml  pages.yml  performance-benchmarks.yml  tests.yml  things-eeg2-comparison.yml
benchmarks/: README.md  ds000117_faces_sub01.csv  nod_animate_all.csv  nod_animate_decoders_all.csv  nod_animate_decoders_first5.csv  nod_animate_elastic_net_logistic_all.csv  nod_animate_first5.csv  nod_animate_gaussian_nb_all.csv  nod_animate_logistic_temporal_smoothing_all.csv  nod_animate_logistic_tuned_anova_select_all.csv  nod_animate_logistic_tuned_pca_whiten_all.csv  nod_animate_logistic_tuned_temporal_ensemble_all.csv  nod_animate_ridge_all.csv  nod_animate_shrinkage_lda_all.csv  nod_animate_sparse_logistic_all.csv  nod_animate_sub01.csv  nod_face_object.csv  nod_superclass_canine_device_all.csv  nod_superclass_container_covering_all.csv
docs/: api-overview.md  benchmarking.md  data-staging.md  examples.md  external-benchmarks.md  getting-started.md  index.md  things_eeg2.md
docs/reference/: benchmark.md  calibration.md  continuous-stimulus-scan.md  decoding.md  emission-compare.md  index.md  inference.md  metadata.md  metrics.md  observation-schema.md  onset-detection.md  onset-sensitivity.md  onset-validation.md  onset-workflow.md  paired-stats.md  paper2-workflow.md  plotting.md  report.md  results.md  semantic-stages.md  stage-things-eeg2.md  stimulus-detection.md  temporal-generalization.md  temporal-model.md  temporal-smoothing.md  temporal-state-workflow.md  time-resolved-decoding.md  validation.md
examples/: README.md
examples/basic/: time_resolved_decoding.py
examples/ds000117/: README.md
examples/nod/: README.md
scripts/: download_nodeeg_data.py  export_paper_results.py  prepare_benchmark_manifest.py  print_ds000117_download_commands.py  stage_ds000117_faces.py  stage_things_eeg2_preprocessed.py
src/reptrace/: __init__.py  _continuous_stimulus_scan_extensions.py  _event_detection_extensions.py  _onset_constants.py  _onset_detection_runs.py  _onset_utils.py  _stimulus_conflict_cli.py  _stimulus_detection_public.py  benchmark.py  calibration.py  cli.py  continuous_observations.py  continuous_stimulus_scan.py  continuous_stimulus_scan_selected.py  decoding.py  emission_compare.py  event_detection.py  inference.py  matched_filter_detection.py  metadata.py  metrics.py  mne_time_decode.py  observation_ensemble.py  observation_schema.py  observations.py  onset_detection.py  onset_sensitivity.py  onset_validation.py  onset_workflow.py  paired_stats.py  paper2_workflow.py  report.py  (+12 more)
tests/: conftest.py  onset_test_helpers.py  test_alignment_window.py  test_benchmark.py  test_calibration.py  test_classifiers.py  test_cli.py  test_continuous_stimulus_scan.py  test_continuous_stimulus_scan_api_binding.py  test_continuous_stimulus_scan_baseline.py  test_cross_subject_decoding.py  test_decoder_backends.py  test_decoding.py  test_decoding_normalization_alignment.py  test_decoding_sampling.py  test_download_nodeeg_data.py  test_emission_compare.py  test_event_detection_public_api.py  test_exact_ece_aggregation.py  test_export_paper_results.py  test_grouped_svm_calibration.py  test_hyperalignment.py  test_hyperalignment_initialization.py  test_inference.py  test_matched_filter_stimulus_detection.py  test_mcca.py  test_metadata.py  test_metrics.py  test_mne_time_decode.py  test_observation_ensemble.py  test_observation_schema.py  test_observations.py  test_onset_detection.py  test_onset_detection_runs.py  test_onset_sensitivity.py  test_onset_threshold_annotation_cache.py  test_onset_threshold_cache.py  test_onset_validation.py  test_onset_workflow.py  test_paired_stats.py  (+26 more)
(+39 files in other folders)
