[tool.poetry]
name = "reptrace"
description = "Probabilistic tracing of neural representations over time."
readme = "README.md"
authors = ["Florian Pfaff <pfaff@ias.uni-stuttgart.de>"]
version = "0.1.1"
license = "MIT"
packages = [{ include = "reptrace", from = "src" }]

[tool.poetry.scripts]
reptrace = "reptrace.cli:main"
reptrace-benchmark = "reptrace.benchmark:main"
reptrace-continuous-stimulus-scan = "reptrace.continuous_stimulus_scan_selected:main"
reptrace-event-detect = "reptrace.event_detection:main"
reptrace-metadata = "reptrace.metadata:main"
reptrace-mne-time-decode = "reptrace.mne_time_decode:main"
reptrace-observation-ensemble = "reptrace.observation_ensemble:main"
reptrace-onset-detect = "reptrace.onset_detection:main"
reptrace-plot-time-decode = "reptrace.plot_time_decode:main"
reptrace-results = "reptrace.results:main"
reptrace-stimulus-detect = "reptrace.stimulus_detection:main"
reptrace-temporal-model = "reptrace.temporal_model:main"
reptrace-temporal-smoothing = "reptrace.temporal_smoothing:main"
reptrace-temporal-state-workflow = "reptrace.temporal_state_workflow:main"
reptrace-validate-manifest = "reptrace.validate_manifest:main"
reptrace-validate-observations = "reptrace.observation_schema:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
joblib = "*"
matplotlib = "*"
mne = "*"
numpy = "*"
pandas = "*"
scikit-learn = "*"
xgboost = { version = "*", optional = true }
torch = { version = "*", optional = true }
pytorch-lightning = { version = "*", optional = true }

[tool.poetry.extras]
xgboost = ["xgboost"]
torch = ["torch", "pytorch-lightning"]
ml = ["xgboost", "torch", "pytorch-lightning"]
all = ["xgboost", "torch", "pytorch-lightning"]

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = { version = "^1.0.4", extras = ["python"] }
mkdocs-material = "^9.7.6"

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
line-length = 180

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"
markers = [
  "performance: deterministic performance-regression tests, skipped unless requested",
]

[tool.pylint.MAIN]
py-version = "3.13"
fail-under = 10
ignore = ["CVS"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "C",
]

[tool.pylint.FORMAT]
max-line-length = 180
